# Copyright 2021 IRT Saint Exupéry, https://www.irt-saintexupery.com
#
# This program is free software; you can redistribute it and/or
# modify it under the terms of the GNU Lesser General Public
# License version 3 as published by the Free Software Foundation.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
# Lesser General Public License for more details.
#
# You should have received a copy of the GNU Lesser General Public License
# along with this program; if not, write to the Free Software Foundation,
# Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
# Contributors:
#    INITIAL AUTHORS - API and implementation and/or documentation
#      :author: Damien Guenot - 20 avr. 2016
#    OTHER AUTHORS   - MACROSCOPIC CHANGES
from __future__ import annotations

import logging
from typing import TYPE_CHECKING
from typing import Any

import pytest
from numpy import array
from numpy import unique
from numpy.testing import assert_equal
from pydantic import ValidationError

from gemseo.core.function.array_function import ArrayFunction
from gemseo.doe.factory import doe_library_factory
from gemseo.doe.openturns._algorithm.ot_axial_doe import OTAxialDOE
from gemseo.doe.openturns._algorithm.ot_composite_doe import OTCompositeDOE
from gemseo.doe.openturns._algorithm.ot_factorial_doe import OTFactorialDOE
from gemseo.doe.openturns.openturns import OpenTURNS
from gemseo.doe.openturns.settings.base_ot_stratified_doe import (
    BaseOTStratifiedDOESettings,
)
from gemseo.doe.openturns.settings.ot_lhsc import OT_LHSC_Settings
from gemseo.doe.openturns.settings.ot_monte_carlo import OT_MONTE_CARLO_Settings
from gemseo.doe.openturns.settings.ot_opt_lhs import OT_OPT_LHS_Settings
from gemseo.optimization.problem import OptimizationProblem
from gemseo.space.design import DesignSpace
from gemseo.util.testing.helper import assert_exception

from .utils import execute_problem
from .utils import generate_test_functions
from .utils import get_problem

if TYPE_CHECKING:
    from gemseo.doe.openturns._algorithm.base_ot_stratified_doe import (
        BaseOTStratifiedDOE,
    )

doe_lib_name = "OpenTURNS"


@pytest.fixture
def identity_problem() -> OptimizationProblem:
    """A problem whose objective is the identity function defined over [0,1]."""
    design_space = DesignSpace()
    design_space.add_real_variable("x", lower_bound=0.0, upper_bound=1.0)

    problem = OptimizationProblem(design_space)
    problem.objective = ArrayFunction(lambda x: x, name="f")
    return problem


def test_call() -> None:
    """Check that calling OpenTURNS library returns a NumPy array correctly shaped.

    Use an algorithm with options to check if the default options are correctly handled.
    """
    algo = doe_library_factory.create("OT_OPT_LHS")
    samples = algo.sample_unit_hypercube(2, settings=OT_OPT_LHS_Settings(n_samples=3))
    assert samples.shape == (3, 2)


@pytest.mark.parametrize(
    "options",
    [
        {"criterion": "unknown_criterion"},
        {"annealing": True, "temperature": "unknown_temperature"},
    ],
)
def test_opt_lhs_wrong_properties(options, snapshot) -> None:
    """Check that using an optimal LHS with wrong properties raises an error."""
    with assert_exception(ValidationError, snapshot):
        execute_problem(
            doe_algo_name="OT_OPT_LHS",
            dim=2,
            n_samples=3,
            **options,
        )


def test_centered_lhs() -> None:
    """Check that a centered LHS produces samples centered in their cells."""
    algo = doe_library_factory.create("OT_LHSC")
    assert set(
        unique(algo.sample_unit_hypercube(2, OT_LHSC_Settings(n_samples=2))).tolist()
    ) == {
        0.25,
        0.75,
    }


@pytest.mark.parametrize(
    ("algo_name", "dim", "n_samples", "options"),
    [
        ("OT_MONTE_CARLO", 2, 3, {"n_samples": 3}),
        ("OT_RANDOM", 2, 3, {"n_samples": 3}),
        ("OT_SOBOL", 2, 3, {"n_samples": 3}),
        ("OT_FULLFACT", 3, 8, {"n_samples": 8}),
        (
            "OT_COMPOSITE",
            2,
            33,
            {"levels": [0.1, 0.25, 0.5, 1.0], "centers": [0.2, 0.3]},
        ),
        ("OT_AXIAL", 2, 17, {"levels": [0.1, 0.25, 0.5, 1.0], "centers": [0.2, 0.3]}),
        (
            "OT_FACTORIAL",
            2,
            17,
            {"levels": [0.1, 0.25, 0.5, 1.0], "centers": [0.2, 0.3]},
        ),
        ("OT_LHS", 2, 3, {"n_samples": 3}),
        ("OT_LHSC", 2, 3, {"n_samples": 3}),
        ("OT_OPT_LHS", 2, 3, {"n_samples": 3}),
        ("OT_OPT_LHS", 2, 3, {"n_samples": 3, "temperature": "Linear"}),
        ("OT_OPT_LHS", 2, 3, {"n_samples": 3, "annealing": False}),
        ("OT_OPT_LHS", 2, 3, {"n_samples": 3, "criterion": "PhiP"}),
        ("OT_SOBOL_INDICES", 3, 20, {"n_samples": 20, "eval_second_order": False}),
        ("OT_SOBOL_INDICES", 3, 16, {"n_samples": 20, "eval_second_order": True}),
    ],
)
def test_algos(algo_name, dim, n_samples, options) -> None:
    """Check that the OpenTURNS library returns samples correctly shaped."""
    problem = get_problem(dim)
    algo = doe_library_factory.create(algo_name)
    settings = algo.ALGORITHM_INFOS[algo_name].settings_class(**options)
    algo.execute(problem, settings=settings)
    assert algo.unit_samples.shape == (n_samples, dim)


def get_expected_nsamples(
    algo: str,
    dim: int,
    n_samples: int | None = None,
) -> int:
    """Returns the expected number of samples.

    This number depends on the dimension of the problem.

    Args:
       algo: The name of the DOE algorithm.
       dim: The dimension of the variables space.
       n_samples: The number of samples.
           If None, deduce it from the dimension of the variables space.

    Returns:
        The expected number of samples.
    """
    if algo == "OT_AXIAL":
        if dim == 1:
            return 5
        if dim == 5:
            return 21
    if algo == "OT_COMPOSITE":
        if dim == 1:
            return 9
        if dim == 5:
            return 85
    if algo == "OT_FACTORIAL":
        if dim == 1:
            return 5
        if dim == 5:
            return 65
    if algo == "OT_FULLFACT" and dim == 5:
        return 1
    if algo == "OT_SOBOL_INDICES":
        if dim == 1:
            return 16
        if dim == 5:
            return 12

    return n_samples


def get_options(
    algo_name: str,
    dim: int,
) -> dict[str, Any]:
    """Returns the options of the algorithms.

    Args:
        algo_name: The name of the DOE algorithm.
        dim: The dimension of the variables spaces.:param algo_name: param dim:

    Returns:
        The options of the DOE algorithm.
    """
    options = {}
    if algo_name in {"OT_AXIAL", "OT_COMPOSITE", "OT_FACTORIAL"}:
        options["levels"] = [0.1, 0.9]
    else:
        options["n_samples"] = 13

    return options


@pytest.mark.parametrize(
    "test_method",
    generate_test_functions(doe_lib_name, get_expected_nsamples, get_options),
)
def test_methods(test_method) -> None:
    """Apply the tests generated by the."""
    test_method()


@pytest.fixture(scope="module")
def variables_space():
    """A variables space."""
    design_space = DesignSpace()
    design_space.add_real_variable("x", size=2, lower_bound=0.0, upper_bound=1.0)
    return design_space


@pytest.mark.parametrize(
    "name",
    [
        "OT_SOBOL",
        "OT_RANDOM",
        "OT_HASELGROVE",
        "OT_REVERSE_HALTON",
        "OT_HALTON",
        "OT_FAURE",
        "OT_MONTE_CARLO",
        "OT_OPT_LHS",
        "OT_LHS",
        "OT_LHSC",
        "OT_FULLFACT",
        "OT_SOBOL_INDICES",
    ],
)
def test_compute_doe(variables_space, name) -> None:
    """Check the computation of a DOE out of a design space."""
    lib = doe_library_factory.create(name)
    settings = lib.ALGORITHM_INFOS[name].settings_class(n_samples=4)
    doe = lib.sample_space(variables_space, settings=settings)
    assert doe.shape == (4, variables_space.dimension)


@pytest.mark.parametrize(
    ("name", "size"), [("OT_FACTORIAL", 5), ("OT_COMPOSITE", 9), ("OT_AXIAL", 5)]
)
def test_compute_stratified_doe(variables_space, name, size) -> None:
    """Check the computation of a stratified DOE out of a design space."""
    library = doe_library_factory.create(name)
    settings = library.ALGORITHM_INFOS[name].settings_class(
        centers=[0.5] * variables_space.dimension, levels=[0.1]
    )
    doe = library.sample_space(variables_space, settings=settings)
    assert doe.shape == (size, variables_space.dimension)


@pytest.mark.parametrize("n_samples", [2, 3, 4])
@pytest.mark.parametrize("seed", [1, 2])
def test_executed_twice(identity_problem, n_samples, seed) -> None:
    """Check that the second call to execute() is correctly taken into account."""
    library = OpenTURNS("OT_MONTE_CARLO")
    settings = OT_MONTE_CARLO_Settings(n_samples=3, seed=1)
    library.execute(identity_problem, settings=settings)
    settings = OT_MONTE_CARLO_Settings(n_samples=n_samples, seed=seed)
    library.execute(identity_problem, settings=settings)
    if seed == 1:
        assert len(identity_problem.database) == max(3, n_samples)
        assert identity_problem.evaluation_counter.maximum == n_samples
        assert identity_problem.evaluation_counter.current == max(n_samples - 3, 0)
    else:
        assert len(identity_problem.database) == 3 + n_samples
        assert identity_problem.evaluation_counter.maximum == n_samples
        assert identity_problem.evaluation_counter.current == n_samples


def test_optimized_lhs_size_1(snapshot):
    """Check that size 1 is not allowed for optimized LHS."""
    library = OpenTURNS("OT_OPT_LHS")
    with assert_exception(ValidationError, snapshot):
        library.ALGORITHM_INFOS["OT_OPT_LHS"].settings_class(n_samples=1)


@pytest.mark.parametrize(
    ("cls", "error_message"),
    [
        (
            OTAxialDOE,
            "An axial DOE in dimension d=2 requires at least 1+2*d=5 samples; got 4.",
        ),
        (
            OTCompositeDOE,
            (
                "A composite DOE in dimension d=2 requires "
                "at least 1+2*d+2^d=9 samples; "
                "got 4."
            ),
        ),
        (
            OTFactorialDOE,
            (
                "A factorial DOE in dimension d=2 requires at least 1+2^d=5 samples; "
                "got 4."
            ),
        ),
    ],
)
def test_ot_stratified_doe_n_samples_error(cls, error_message, snapshot):
    """Verify that a stratified DOE algorithm raises when n_samples is too small."""
    with assert_exception(ValueError, snapshot):
        cls().generate_samples(2, BaseOTStratifiedDOESettings(n_samples=4))


@pytest.mark.parametrize(
    ("cls", "n_samples"), [(OTAxialDOE, 25), (OTCompositeDOE, 57), (OTFactorialDOE, 33)]
)
def test_ot_stratified_doe_n_samples(cls, n_samples):
    """Verify that a stratified DOE algorithm works when n_samples is ok."""
    # We use d=3 and l=4.
    assert cls().generate_samples(
        3, BaseOTStratifiedDOESettings(n_samples=n_samples)
    ).shape == (n_samples, 3)


@pytest.mark.parametrize(
    ("cls", "n_samples", "error_message"),
    [
        (
            OTAxialDOE,
            26,
            (
                "An axial DOE of 26 samples in dimension 3 does not exist; "
                "use 25 samples instead."
            ),
        ),
        (
            OTCompositeDOE,
            58,
            (
                "A composite DOE of 58 samples in dimension 3 does not exist; "
                "use 57 samples instead."
            ),
        ),
        (
            OTFactorialDOE,
            34,
            (
                "A factorial DOE of 34 samples in dimension 3 does not exist; "
                "use 33 samples instead."
            ),
        ),
    ],
)
def test_ot_stratified_doe_n_samples_warning(cls, n_samples, caplog, error_message):
    """Verify that a stratified DOE algorithm warns when n_samples is too important."""
    # We use d=3 and l=4.
    algo = cls()
    samples = algo.generate_samples(3, BaseOTStratifiedDOESettings(n_samples=n_samples))
    assert samples.shape == (n_samples - 1, 3)

    _, level, msg = caplog.record_tuples[0]
    assert level == logging.WARNING
    assert msg == error_message

    assert_equal(
        samples,
        cls().generate_samples(3, BaseOTStratifiedDOESettings(n_samples=n_samples - 1)),
    )


@pytest.mark.parametrize("cls", [OTAxialDOE, OTCompositeDOE, OTFactorialDOE])
def test_ot_stratified_centers_dimension_error(cls: BaseOTStratifiedDOE, snapshot):
    """Verify that a stratified DOE algorithm raises when centers is ill-dimensioned."""
    with assert_exception(ValueError, snapshot):
        cls().generate_samples(3, BaseOTStratifiedDOESettings(centers=[0.5, 0.6]))


@pytest.mark.parametrize("cls", [OTAxialDOE, OTCompositeDOE, OTFactorialDOE])
@pytest.mark.parametrize("centers", [[0.0, 0.5], [0.5, 1.0]])
def test_ot_stratified_centers_value_error(cls, centers, snapshot):
    """Verify that a stratified DOE algorithm raises when centers has wrong values."""
    with assert_exception(ValueError, snapshot):
        cls().generate_samples(2, BaseOTStratifiedDOESettings(centers=centers))


@pytest.mark.parametrize("cls", [OTAxialDOE, OTCompositeDOE, OTFactorialDOE])
def test_ot_stratified_levels_value_error(cls, snapshot):
    """Verify that a stratified DOE algorithm raises when centers has wrong values."""
    with assert_exception(ValueError, snapshot):
        cls().generate_samples(2, BaseOTStratifiedDOESettings(levels=[0, 0.5]))


@pytest.mark.parametrize(
    ("cls", "centers", "levels", "expected_samples"),
    [
        (
            OTAxialDOE,
            0.5,
            [0.5],
            array([[0.5, 0.5], [0.75, 0.5], [0.25, 0.5], [0.5, 0.75], [0.5, 0.25]]),
        ),
        (
            OTAxialDOE,
            [0.5],
            [0.5],
            array([[0.5, 0.5], [0.75, 0.5], [0.25, 0.5], [0.5, 0.75], [0.5, 0.25]]),
        ),
        (
            OTAxialDOE,
            [0.75, 0.5],
            [0.5],
            array([
                [0.75, 0.5],
                [0.875, 0.5],
                [0.375, 0.5],
                [0.75, 0.75],
                [0.75, 0.25],
            ]),
        ),
        (
            OTCompositeDOE,
            0.5,
            [0.5],
            array([
                [0.5, 0.5],
                [0.25, 0.25],
                [0.75, 0.25],
                [0.25, 0.75],
                [0.75, 0.75],
                [0.75, 0.5],
                [0.25, 0.5],
                [0.5, 0.75],
                [0.5, 0.25],
            ]),
        ),
        (
            OTCompositeDOE,
            [0.5],
            [0.5],
            array([
                [0.5, 0.5],
                [0.25, 0.25],
                [0.75, 0.25],
                [0.25, 0.75],
                [0.75, 0.75],
                [0.75, 0.5],
                [0.25, 0.5],
                [0.5, 0.75],
                [0.5, 0.25],
            ]),
        ),
        (
            OTCompositeDOE,
            [0.75, 0.5],
            [0.5],
            array([
                [0.75, 0.5],
                [0.375, 0.25],
                [0.875, 0.25],
                [0.375, 0.75],
                [0.875, 0.75],
                [0.875, 0.5],
                [0.375, 0.5],
                [0.75, 0.75],
                [0.75, 0.25],
            ]),
        ),
        (
            OTFactorialDOE,
            0.5,
            [0.5],
            array([[0.5, 0.5], [0.25, 0.25], [0.75, 0.25], [0.25, 0.75], [0.75, 0.75]]),
        ),
        (
            OTFactorialDOE,
            [0.5],
            [0.5],
            array([[0.5, 0.5], [0.25, 0.25], [0.75, 0.25], [0.25, 0.75], [0.75, 0.75]]),
        ),
        (
            OTFactorialDOE,
            [0.7, 0.5],
            [0.5],
            array([[0.7, 0.5], [0.35, 0.25], [0.85, 0.25], [0.35, 0.75], [0.85, 0.75]]),
        ),
    ],
)
def test_ot_stratified_results(cls, centers, levels, expected_samples):
    """Check the DOEs generated by the stratified DOE algorithms."""
    samples = cls().generate_samples(
        2, BaseOTStratifiedDOESettings(centers=centers, levels=levels)
    )
    assert_equal(samples, expected_samples)
